# mvm

./: .gitignore  .goreleaser.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TESTING.md  go.mod  go.sum
.claude/commands/: setup-mvm.md
.github/workflows/: ci.yml  release.yml
agent/: go.mod  go.sum  main.go  vsock_linux.go  vsock_other.go
cmd/mvm/: main.go
cmd/mvm-menu/: main.go
cmd/mvm-uffd/: main.go  main_other.go
deploy/: mvm-daemon.service
docs/: PRODUCT_BRIEF.md  benchmarks.md
docs/autoresearch/: README.md  program.md
internal/agentclient/: client.go  client_test.go  dial.go  dial_vz.go  dial_vz_test.go  protocol.go
internal/cli/: build.go  delete.go  diff.go  doctor.go  exec.go  exec_direct.go  exec_direct_test.go  exec_test.go  helpers.go  idle.go  images.go  init.go  install.go  list.go  logs.go  menu.go  pause.go  pool.go  root.go  serve.go  snapshot.go  ssh.go  start.go  start_test.go  stop.go  template.go  update.go  watch.go  watch_test.go
internal/firecracker/: build.go  build_test.go  chroot.go  config.go  config_test.go  executor.go  executor_test.go  install.go  integration_test.go  network.go  network_test.go  pool.go  (+7 more)
npm/: install.js  package.json
npm-platform/: package.json
scripts/: autoresearch-bench.sh  autoresearch-loop.sh  install-cloud.sh  integration-test.sh  test-openclaw.sh
sdk/: client.go  client_test.go  types.go
sdks/python/: README.md  pyproject.toml
sdks/python/mvm_sandbox/: __init__.py  client.py  exceptions.py  types.py
sdks/python/tests/: test_client.py
vz/: Package.resolved  Package.swift
(+60 files in other folders)
