[project]
name = "mvm-sandbox"
version = "0.1.0"
description = "Python SDK for mvm sandbox — local and cloud microVM sandboxes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-httpx>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
